objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>CampaignEconomics__c</fullName>
        <inlineHelpText>e.g. If PPC Budget increase - what is the minimum monthly  budget to qualify (e.g. $1000/mo)  what is the % of budget  increase and for how long?</inlineHelpText>
        <label>Campaign Economics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Outreach__c</fullName>
        <label>Campaign Outreach</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientStatus__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Clients</fullName>
                </value>
                <value>
                    <fullName>Existing Clients</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountPercent__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <label>Products / Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Centermark</fullName>
                </value>
                <value>
                    <fullName>Foundations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PromotionMessaging__c</fullName>
        <label>Promotion Messaging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PromotionName__c</fullName>
        <label>Promotion Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueGoal__c</fullName>
        <inlineHelpText>Example: ROI for Promo $XX, XXX -  What do we expect the increase in monthly recurring revenue to be?)</inlineHelpText>
        <label>Revenue Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmissionDate__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Month</fullName>
                </value>
                <value>
                    <fullName>3 Month</fullName>
                </value>
                <value>
                    <fullName>4 Month</fullName>
                </value>
                <value>
                    <fullName>5 Month</fullName>
                </value>
                <value>
                    <fullName>6 Month</fullName>
                </value>
                <value>
                    <fullName>9 Month</fullName>
                </value>
                <value>
                    <fullName>12 Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Used to setup promotion offers and discounts.</description>
    <label>Promotion</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Promo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>